# Hl7OpenSoup

./: .gitignore  APPLICATION_SUMMARY.md  HL7 Viewer_Editor Tech Stack Blue Print.md  PROJECT_STATUS_REPORT.md  QUICK_START.md  README.md  build_app.py  pyproject.toml  requirements.txt  setup.py
scripts/: install_deps.py  run_dev.py
src/hl7opensoup/: __init__.py  main.py
src/hl7opensoup/config/: __init__.py  app_config.py
src/hl7opensoup/core/: __init__.py  hl7_exporter.py  hl7_interpreter.py  hl7_parser.py  hl7_validator.py
src/hl7opensoup/database/: mongodb_connector.py
src/hl7opensoup/models/: __init__.py  hl7_message.py
src/hl7opensoup/ui/: __init__.py  export_dialog.py  hl7_editor.py  hl7_soup_style.py  main_window.py  mongodb_dialog.py  search_dialog.py
src/hl7opensoup/utils/: __init__.py  file_utils.py  logging_config.py
tests/: __init__.py  test_basic_setup.py  test_hl7_parsing.py
